# bitcoin-tutorials

./: Cargo.toml  config-node.bash  temp.txt
src/: main.rs
src/derivation/: mod.rs
src/setup/: mod.rs
src/spending_paths/: mod.rs  p2tr.rs  p2wpkh.rs
