[package]
name = "bitcoin-tutorials"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincore-rpc="0.16.0"
miniscript={version="9.0.0"}
bitcoin={version="0.29.2",features=["rand","std"]}
bitcoin_hashes = { version = "0.11.0", default-features = false }